/simple to /pypi/web/simple

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,6 @@ norecursedirs = bin parts develop-eggs eggs venv .* _* CVS {args}
 whitelist_externals=
     tox
 setenv=
-    PYPISERVER_SETUP_CMD=pip install --upgrade --pre --index-url https://test.pypi.org/pypi/simple/ --extra-index-url https://pypi.org/pypi/web/simpletwine
+    PYPISERVER_SETUP_CMD=pip install --upgrade --pre --index-url https://test.pypi.org/pypi/web/simple/ --extra-index-url https://pypi.org/pypi/web/simpletwine
 commands=
     tox
